--- a/Benutzerverwaltung/Benutzerverwaltung/View/CustomerDetailsView.xaml
+++ b/Benutzerverwaltung/Benutzerverwaltung/View/CustomerDetailsView.xaml
@@ -7,7 +7,7 @@
         xmlns:viewmodel="clr-namespace:Benutzerverwaltung.ViewModel"
          xmlns:p="clr-namespace:Benutzerverwaltung.Properties"
         mc:Ignorable="d"
-        Title="CustomerDetailsView" Height="500" Width="800">
+        Title="CustomerDetailsView" Height="500" Width="800" Background="#FF6DA2FF">
     <Window.Resources>
         <viewmodel:DetailsViewModel x:Key="detailsVM"/>
     </Window.Resources>
@@ -26,21 +26,21 @@
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <!--Labels-->
-        <Label Content="{x:Static p:Resources.FirstName}" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" />
-        <Label Content="{x:Static p:Resources.LastName}" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-        <Label Content="{x:Static p:Resources.Address}" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-        <Label Content="{x:Static p:Resources.Birthdate}" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-        <Label Content="{x:Static p:Resources.CustomerId}" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center"  />
-        <Label Content="{x:Static p:Resources.Username}" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center"  />
+        <Label Content="{x:Static p:Resources.FirstName}" Grid.Row="0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="{DynamicResource FontSize}" />
+        <Label Content="{x:Static p:Resources.LastName}" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="{DynamicResource FontSize}" />
+        <Label Content="{x:Static p:Resources.Address}" Grid.Row="2" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="{DynamicResource FontSize}" />
+        <Label Content="{x:Static p:Resources.Birthdate}" Grid.Row="3" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="{DynamicResource FontSize}" />
+        <Label Content="{x:Static p:Resources.CustomerId}" Grid.Row="4" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="{DynamicResource FontSize}" />
+        <Label Content="{x:Static p:Resources.Username}" Grid.Row="5" HorizontalAlignment="Center" VerticalAlignment="Center"  FontSize="{DynamicResource FontSize}" />
 
         <!--Textboxex-->
 
-        <TextBox x:Name="txtFirstName" Grid.Column="1" Grid.Row="0"  Margin="10,5,10,5" Text="{Binding Path=Kunde.FirstName}"/>
-        <TextBox x:Name="txtLastName" Grid.Column="1" Grid.Row="1" Margin="10,5,10,5" Text="{Binding Path=Kunde.LastName}"/>
-        <TextBox x:Name="txtAddress" Grid.Column="1" Grid.Row="2"  Margin="10,5,10,5" Text="{Binding Path=Kunde.Adress}"/>
-        <TextBox x:Name="txtBirthDate" Grid.Column="1" Grid.Row="3" Margin="10,5,10,5" Text="{Binding Path=Kunde.BirthDate}"/>
-        <TextBox x:Name="txtCustomerId" IsReadOnly="True" Grid.Column="1" Grid.Row="4" Margin="10,5,10,5" Text="{Binding Path=Kunde.CustomerId}"/>
-        <TextBox x:Name="txtUsername" Grid.Column="1" Grid.Row="5" Margin="10,5,10,5" Text="{Binding Path=Kunde.Username}"/>
+        <TextBox x:Name="txtFirstName" Grid.Column="1" Grid.Row="0"  Margin="10,5,10,5" Text="{Binding Path=Kunde.FirstName}" Style="{DynamicResource textBoxStyle}"/>
+        <TextBox x:Name="txtLastName" Grid.Column="1" Grid.Row="1" Margin="10,5,10,5" Text="{Binding Path=Kunde.LastName}" Style="{DynamicResource textBoxStyle}"/>
+        <TextBox x:Name="txtAddress" Grid.Column="1" Grid.Row="2"  Margin="10,5,10,5" Text="{Binding Path=Kunde.Adress}" Style="{DynamicResource textBoxStyle}"/>
+        <TextBox x:Name="txtBirthDate" Grid.Column="1" Grid.Row="3" Margin="10,5,10,5" Text="{Binding Path=Kunde.BirthDate}" Style="{DynamicResource textBoxStyle}"/>
+        <TextBox x:Name="txtCustomerId" IsReadOnly="True" Grid.Column="1" Grid.Row="4" Margin="10,5,10,5" Text="{Binding Path=Kunde.CustomerId}" Style="{DynamicResource textBoxStyle}"/>
+        <TextBox x:Name="txtUsername" Grid.Column="1" Grid.Row="5" Margin="10,5,10,5" Text="{Binding Path=Kunde.Username}" Style="{DynamicResource textBoxStyle}"/>
 
         <!-- Buttons-->
     </Grid>
